core/engine/tests/snapshots/engine__insurance-breakdown_1.snap
---
source: core/engine/tests/engine.rs
expression: serialized_result
---
performance: "[perf]"
result:
  breakdown:
    - key: premium
      title: Premium
      value:
        "$serde_json::private::Number": "83"
    - key: gst
      title: GST
      value:
        "$serde_json::private::Number": "0"
    - key: brokerFee
      title: Broker Fee
      value:
        "$serde_json::private::Number": "20"
trace:
  0b998a2f-2b8d-45b4-8cea-13c731d0cd0d:
    id: 0b998a2f-2b8d-45b4-8cea-13c731d0cd0d
    input:
      coverage:
        pi: 1M
        pl: 10M
    name: Fees
    order:
      "$serde_json::private::Number": "4"
    output:
      fee:
        broker:
          "$serde_json::private::Number": "20"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map: {}
      rule:
        _id: 629a0bff-c452-474c-b5a0-0b5c0b7d0880
  453ed4ec-8754-4768-823a-0741e12926ee:
    id: 453ed4ec-8754-4768-823a-0741e12926ee
    input:
      base:
        pi:
          "$serde_json::private::Number": "63"
        pl:
          "$serde_json::private::Number": "20"
      fee:
        broker:
          "$serde_json::private::Number": "20"
      tax:
        gst:
          "$serde_json::private::Number": "0"
    name: Aggregator
    order:
      "$serde_json::private::Number": "5"
    output:
      breakdown:
        - key: premium
          title: Premium
          value:
            "$serde_json::private::Number": "83"
        - key: gst
          title: GST
          value:
            "$serde_json::private::Number": "0"
        - key: brokerFee
          title: Broker Fee
          value:
            "$serde_json::private::Number": "20"
    performance: "[perf]"
    traceData:
      log: []
  4b197c9b-8db6-4d67-8e64-2ea7d262b1c6:
    id: 4b197c9b-8db6-4d67-8e64-2ea7d262b1c6
    input: ~
    name: Request
    order:
      "$serde_json::private::Number": "0"
    output:
      coverage:
        pi: 1M
        pl: 10M
    performance: "[perf]"
    traceData: ~
  52d501fa-5089-471a-81e1-9d604b6b864d:
    id: 52d501fa-5089-471a-81e1-9d604b6b864d
    input:
      breakdown:
        - key: premium
          title: Premium
          value:
            "$serde_json::private::Number": "83"
        - key: gst
          title: GST
          value:
            "$serde_json::private::Number": "0"
        - key: brokerFee
          title: Broker Fee
          value:
            "$serde_json::private::Number": "20"
    name: Response
    order:
      "$serde_json::private::Number": "6"
    output: ~
    performance: "[perf]"
    traceData: ~
  831e22b5-93c4-4963-9d21-8af157dd1606:
    id: 831e22b5-93c4-4963-9d21-8af157dd1606
    input:
      coverage:
        pi: 1M
        pl: 10M
    name: PL Base
    order:
      "$serde_json::private::Number": "1"
    output:
      base:
        pl:
          "$serde_json::private::Number": "20"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        coverage.pl: 10M
      rule:
        _id: e4ffd222-ef9c-4ab7-a5ef-6f6ff0c6f1c2
        "coverage.pl[6d179b45-a0b7-4c85-8324-73058f3def42]": "\"10M\""
  b9d38a6e-2d57-483c-9765-66d97b940a04:
    id: b9d38a6e-2d57-483c-9765-66d97b940a04
    input:
      coverage:
        pi: 1M
        pl: 10M
    name: GST
    order:
      "$serde_json::private::Number": "2"
    output:
      tax:
        gst:
          "$serde_json::private::Number": "0"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "1"
      reference_map:
        country: ~
        state: ~
      rule:
        _id: 6670eccf-b410-4e6d-9979-da9f6bddc75d
        "country[5ca5e8d1-8339-483b-9c81-cdd34a4fb953]": ""
        "state[8342de09-7a13-4d3b-82f9-156e2381817d]": ""
  ebec39cc-ac87-4145-ae5d-744759a37268:
    id: ebec39cc-ac87-4145-ae5d-744759a37268
    input:
      coverage:
        pi: 1M
        pl: 10M
    name: PI Base
    order:
      "$serde_json::private::Number": "3"
    output:
      base:
        pi:
          "$serde_json::private::Number": "63"
    performance: "[perf]"
    traceData:
      index:
        "$serde_json::private::Number": "0"
      reference_map:
        coverage.pi: 1M
      rule:
        _id: 900c2af2-8b75-414f-b365-97fbf2ddf28f
        "coverage.pi[ec711970-6b90-492f-8b5b-4a6e7cbf3088]": "\"1M\""
